--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -6,8 +6,9 @@ on:
 
 jobs:
   build:
-
+  
     runs-on: self-hosted
 
     steps:
+      - uses: actions/checkout@v2
       - run: echo 'New deployment'
